--- a/covid/index.html
+++ b/covid/index.html
@@ -11,7 +11,7 @@
   
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/covid/style.css">
 </head>
 
 <body>
@@ -59,8 +59,8 @@
   </tbody>
   </table>
   </div>
- <script type="text/javascript" src="jquery.js"></script>
-  <script src="main.js"></script>
+ <script type="text/javascript" src="/covid/jquery.js"></script>
+  <script src="/covid/main.js"></script>
   
 
 </body>
